as supervisor i see the list of users with pagination

--- a/app/views/supervisor/students.html.erb
+++ b/app/views/supervisor/students.html.erb
@@ -50,6 +50,7 @@
               </div>
             </div>
           <% end %>
+          <%= paginate @students%>
         </div>
       </div>
     </div>
