Terms and conditions on user registration and stand alone view

--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -7,14 +7,15 @@
       <%= form.input :last_name, :input_html => { :placeholder => t('forms.last_name'), :class => "names" } %>
       <%= form.input :password, :input_html => { :placeholder => t('forms.password') + " *", :class => "span4" } %>
       <%= form.input :password_confirmation, :input_html => { :placeholder => t('forms.password_confirmation') + " *", :class => "span4" } %>
+      <%= form.input :terms_of_service, :as => :boolean, :label => link_to(t('forms.terms'), terms_path, :class => "terms fancybox.ajax"), :required => true, :input_html => { :checked => true, :style => 'display:inline;' } %>
     <% end %>
     <%= form.buttons do %>
       <%= form.commit_button :button_html => {:id => :register, :class => "btn", :value => t('forms.register_btn') } %>
     <% end %>
     <% unless params[:controller] == 'registrations' %>
-      <%= link_to t('forms.register_teacher'), new_teacher_user_registration_path %>
+      <%= link_to t('forms.register_teacher'), new_teacher_user_registration_path, :class => 'switch_user' %>
     <% else %>
-      <%= link_to t('forms.register_student'), root_url %>
+      <%= link_to t('forms.register_student'), root_url , :class => 'switch_user'%>
     <% end %>
   <% end %>
 </div>
