--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,14 @@
 <footer>
   <div class="container">
-    <p><a href="">Nosotros</a> | <a href="">Ayuda</a> | <a href="">Blog</a> | <a href="">M&oacute;vil </a> | <a href="">Privacidad</a> | <a href="">Publicidad</a> | <a href="">Recursos</a> &copy; 2012 C&uacute;rsame </p>
+    <p>
+    <a href="">Nosotros</a> | 
+    <a href="">Ayuda</a> | 
+    <a href="">Blog</a> | 
+    <a href="">M&oacute;vil </a> | 
+    <a href="">Privacidad</a> | 
+    <%= link_to "Términos", terms_path %> | 
+    <a href="">Publicidad</a> | 
+    <a href="">Recursos</a> 
+    &copy; 2012 C&uacute;rsame </p>
   </div>
 </footer>
