--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -824,9 +824,13 @@ ul.nav-member-avatars li {
 	color: #fffeff;
 }
 
-.register-box a {
+.register-box a.switch_user {
 	color: #fffeff;
 	float: right;
+}
+
+.register-box a.terms {
+	color: #fffeff;
 }
 
 .register-box label {
@@ -944,6 +948,27 @@ ul.auth-links {
 	margin-bottom: 0;
 	margin-left: 75px;
 }
+
+fieldset ol li#teacher_user_terms_of_service_input,
+fieldset ol li#student_user_terms_of_service_input{
+	padding-left: 0px;
+  text-align: left;
+}
+
+li#teacher_user_terms_of_service_input label,
+li#student_user_terms_of_service_input label{
+  text-align: left;
+  width: 90%;
+  color: #fffeff;
+  font-size: 11px;
+}
+
+li#teacher_user_terms_of_service_input input[type="checkbox"], 
+li#student_user_terms_of_service_input input[type="checkbox"] {
+  width: 10px;
+  margin-right: 8px;
+}
+
 
 /* @end */
 
