--- a/app/views/supervisor/teachers.html.erb
+++ b/app/views/supervisor/teachers.html.erb
@@ -19,7 +19,7 @@
       </div>
       
       <div class="span9">
-        <h2><%= t('courses.members.teachers') %></h2>
+        <h2><%= @approved.count + @pending_teachers_total%> <%= t('.registered_teachers') %></h2>
         <ul class="tabs tabs_fix">
           <li class=<%= class_for_active_li(params[:type], "approved")%>><%= link_to t('courses.teachers.approved'), '#approved' %></li>
           <li class=<%= class_for_active_li(params[:type], "pending")%>><%= link_to_pending_teachers(@pending_teachers_total) %></li>
