--- a/app/views/supervisor/students.html.erb
+++ b/app/views/supervisor/students.html.erb
@@ -16,10 +16,16 @@
       <div class="span5">
         <%= render :partial => "supervisor/shared/admin_menu" %>
       </div>
+
+      <div class="span5">
+        <h2><%= pluralize @students.size, t('.registered_students') %></h2>
+      </div>
+      <div class="span4" style="margin-left:15px;">
+        <%= link_to t('supervisor.export_csv'), supervisor_students_path(:format => :csv), :class => "btn info small right" %>
+      </div>
       
       <div class="span9">
-        <h2><%= @students.count%> <%= t('.registered_students') %></h2>
-        
+
         <div class="users students">
           <% @students.each do |student| %>
             <div class="user padding-all <%= cycle('odd', 'even') %>">
