--- a/app/views/supervisor/shared/_admin_menu.html.erb
+++ b/app/views/supervisor/shared/_admin_menu.html.erb
@@ -5,5 +5,6 @@
   <%= tab.courses t('.courses'), courses_path %>
   <%= teachers_notification_tab(@pending_teachers_total, tab) %>
   <%= tab.students t('.students'), supervisor_students_path %>
+  <%= tab.new_user t('.new_user'), supervisor_new_user_path %>
   <li><%= link_to(t('.reports'), "#") %></li>
 <% end %>
