--- a/app/views/supervisor/teachers.html.erb
+++ b/app/views/supervisor/teachers.html.erb
@@ -21,7 +21,10 @@
       <div class="span5">
         <h2><%= pluralize @approved.size+@pending_teachers_total, t('.registered_teachers') %></h2>
       </div>
-      <div class="span4" style="margin-left:15px;">
+      <div class="span2">
+        <%= link_to t('supervisor.import_csv'), supervisor_import_users_path(:role => :teacher), :class => "btn small " %>
+      </div>
+      <div class="span2" style="margin-left:15px;">
         <%= link_to t('supervisor.export_csv'), supervisor_teachers_path(:format => :csv), :class => "btn info small right" %>
       </div>
       
