--- a/app/views/supervisor/new_user.html.erb
+++ b/app/views/supervisor/new_user.html.erb
@@ -16,10 +16,23 @@
         <%= render :partial => "supervisor/shared/admin_menu" %>
       </div>
 
-      <div class="span5">
+      <div class="span9">
         
-      </div>
-      <div class="span4" style="margin-left:15px;">
+        <%= semantic_form_for @user, :url => users_path, :method => :post  do |form| %>
+          <%= form.inputs :basic do %>
+            <%= form.input :email, :input_html => { :placeholder => t('forms.email') + " *", :class => "span4" } %>
+            <%= form.input :first_name, :input_html => { :placeholder => t('forms.first_name') + " *", :class => "span4", :style => 'margin-right:10px;' }%>
+            <%= form.input :last_name, :input_html => { :placeholder => t('forms.last_name'), :class => "span4" } %>
+            <%= form.input :role, :as => :select, :collection => { "Profesor" => "teacher", "Estudiante" => "student" },
+              :prompt => t("formtastic.actions.select_one"), :hint => "El usuario recibirá un e-mail a su correo con una contraseña aleatoria" %>
+            <%= form.input :status, :as => :hidden, :input_html => { :value => "active" } %>
+            <%= form.input :terms_of_service, :as => :hidden, :input_html => { :value => "1" } %>
+          <% end %>
+          <%= form.buttons :class => "fieldset-admin" do %>
+            <%= form.commit_button :label => "Registrar usuario", :button_html => {:id => :submit, :class => 'btn right'} %>
+          <% end %>
+           <span class="fieldset-admin-txt"><%= link_to("Cancelar", supervisor_new_user_path) %></span>
+        <% end %>
       </div>
     </div>
     <!-- Contexts or Networks should be in a drop-down or the way Github does Contexts -->
