Modified user mailer on new user by supervisor body and subject

--- a/app/views/user_mailer/new_user_by_supervisor.html.erb
+++ b/app/views/user_mailer/new_user_by_supervisor.html.erb
@@ -1,4 +1,5 @@
 <h2 class="h2">Bienvenido <%= @user.name %>!</h2>
+<strong>Has sido dado de alta en Cúrsame por el administrador de la red <%= @network.name %>.</strong>
 <% if @user.student?%>
 <strong>A partir de ahora, puedes disfrutar de Cúrsame y todas las herramientas que te ofrece como:</strong>
   <ul>
@@ -25,6 +26,6 @@
   </ul>
 <%end%>
 <strong>Tu contraseña para ingresar es: <%= @password %></strong>
-<h1><%= link_to 'Ir a Cúrsame >>', new_user_session_url(:subdomain=>@subdomain) %></h1>
+<h1><%= link_to 'Ir a Cúrsame >>', new_user_session_url(:subdomain=>@network.subdomain) %></h1>
 <br>
 <p>Si tienes alguna duda, puedes escribirnos a <%= link_to 'hola@cursa.me', 'mailto:hola@cursa.me' %>.</p>
