--- a/app/views/supervisor/students.html.erb
+++ b/app/views/supervisor/students.html.erb
@@ -18,7 +18,7 @@
       </div>
 
       <div class="span5">
-        <h2><%= pluralize @students.size, t('.registered_students') %></h2>
+        <h2><%= pluralize @students.count, t('.registered_students') %></h2>
       </div>
       <div class="span2" style="margin-left:20px;">
         <%= link_to t('supervisor.import_csv'), supervisor_import_users_path(:role => :student), :class => "btn small" %>
