--- a/app/views/supervisor/teachers.html.erb
+++ b/app/views/supervisor/teachers.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="span5">
-        <h2><%= pluralize @approved.size+@pending_teachers_total, t('.registered_teachers') %></h2>
+        <h2><%= pluralize @approved.count+@pending_teachers_total, t('.registered_teachers') %></h2>
       </div>
       <div class="span2" style="margin-left:20px;">
         <%= link_to t('supervisor.import_csv'), supervisor_import_users_path(:role => :teacher), :class => "btn small" %>
