--- a/app/views/supervisor/students.html.erb
+++ b/app/views/supervisor/students.html.erb
@@ -21,10 +21,10 @@
         <h2><%= pluralize @students.count, t('.registered_students') %></h2>
       </div>
       <div class="span2" style="margin-left:20px;">
-        <%= link_to t('supervisor.import_csv'), supervisor_import_users_path(:role => :student), :class => "btn small" %>
+        <%= link_to t('supervisor.import_students'), supervisor_import_users_path(:role => :student), :class => "btn small" %>
       </div>
       <div class="span2" style="margin-left:10px;">
-        <%= link_to t('supervisor.export_csv'), supervisor_students_path(:format => :csv), :class => "btn info small right" %>
+        <%= link_to t('supervisor.export_students'), supervisor_students_path(:format => :csv), :class => "btn info small right" %>
       </div>
       
       <div class="span9">
