as super admin i want to know the number of users per network

--- a/app/views/admin/networks/index.html.erb
+++ b/app/views/admin/networks/index.html.erb
@@ -9,7 +9,9 @@
   <% @networks.each do |network| %>
     <div class="network">
       <strong>Name:</strong> <%= link_to network.name, admin_network_path(network) %><br/>
-      <strong>Subdomain:</strong> <%= network.subdomain %>
+      <strong>Subdomain:</strong> <%= network.subdomain %><br />
+      <strong>Users count:</strong> <%= network.users.count%>
+      <hr />
     </div>
   <% end %>
 </div>
