as supervisor I can activate or deactivate the public registration

--- a/app/views/supervisor/networks/edit.html.erb
+++ b/app/views/supervisor/networks/edit.html.erb
@@ -29,6 +29,7 @@
             <%= form.input :slogan, :input_html => {:class => "span6"} %>
             <%= form.input :welcome_message, :as => :text, :input_html => {:class => "span6", :rows => 6} %>
             <%= form.input :time_zone, :as => :time_zone, :input_html => {:class => "large"} %>
+            <%= form.input :public_registry, :as => :boolean%>
           <% end %>
 
           <%= form.buttons :class => "fieldset-admin" do %>
