--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,19 +27,14 @@
             <h3>Options</h3>
             <ul>
               <li><%= link_to 'Networks', admin_networks_path %></li>
-              <li><%= link_to 'Users', '#' %></li>
+              <li><%= link_to 'Estadísticas', admin_statistics_path %></li>
             </ul>
-            <em>Find me in views/layouts/admin.html.erb</em>
           </div>
 
         </div>
 
         <div class="span10">
           <%= yield %>
-        </div>
-
-        <div class="span3" style="margin:0;">
-          sidebar?
         </div>
       </div>
 
