--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
       <% end %>
     </div>
     <div class="span5">
-      <%if @network.public_registry?%>
+      <%if @network and @network.public_registry?%>
       <%= render :partial => 'registrations/form', :locals => {:resource => @user, :resource_name => 'student_user', :url => student_user_registration_path} %>
       <%end%>
     </div>
