--- a/app/views/courses/members.html.erb
+++ b/app/views/courses/members.html.erb
@@ -20,10 +20,10 @@
       <div class="span10">
         <h2><%= t('courses.members.members_in_course') %></h2>
 
-        <% if @pending_students %>
+        <% if @pending_students or @pending_teachers %>
           <h3><%= t('courses.requests.requests') %></h2>
           <div class="members">
-            <%= render :partial => 'member', :collection => @pending_students %>
+            <%= render :partial => 'member', :collection => @pending_students+@pending_teachers %>
           </div>
         <% end %>
 
