--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,7 +27,7 @@
             <h3>Options</h3>
             <ul>
               <li><%= link_to 'Networks', admin_networks_path %></li>
-              <li><%= link_to 'Estadísticas', admin_statistics_path %></li>
+              <li><%= link_to t("super_admin.shared.statistics"), admin_statistics_path %></li>
             </ul>
           </div>
 
