--- a/app/views/supervisor/networks/edit.html.erb
+++ b/app/views/supervisor/networks/edit.html.erb
@@ -29,11 +29,16 @@
             <%= form.input :slogan, :input_html => {:class => "span6"} %>
             <%= form.input :welcome_message, :as => :text, :input_html => {:class => "span6", :rows => 6} %>
             <%= form.input :time_zone, :as => :time_zone, :input_html => {:class => "large"} %>
-            <h3><%= t('supervisor.config.registry') %></h3>
-            <%= form.input :registry_domain, :input_html => {:class => "span6", :rows => 6} %>
-            <%= form.input :public_registry, :as => :boolean %>
-            <%= form.input :private_registry, :as => :boolean, :input_html => {:class => "span6" } %>
           <% end %>
+          
+          <%= form.inputs do%>
+            <h3><%= t('supervisor.config.registry') %></h3>
+            <%= form.input :public_registry, :as => :boolean, :wrapper_html => {:class => "boolean_li"}%>
+          <% end %>
+          <%= form.inputs do%>
+            <%= form.input :private_registry, :as => :boolean, :wrapper_html => {:class => "boolean_li"} %>
+            <%= form.input :registry_domain, :label => "", :wrapper_html => {:class => "registry_li"}, :input_html => {:class => "span3", :rows => 3, :placeholder => "#{t('.example')} gmail.com"} %>
+          <%end%>
 
           <%= form.buttons :class => "fieldset-admin" do %>
             <%= form.commit_button :label => "Guardar Cambios", :button_html => {:id => :submit, :class => 'btn right'} %>
