--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -49,7 +49,7 @@
         </div>
 
         <div class="questions">
-          <% if current_user.teacher? %>
+          <% if current_user.teacher? or current_user.supervisor? %>
             <h2><%= t('.preview') %></h2>
             <%= render :partial => 'question', :collection => @survey.questions %>
 
