--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -25,7 +25,7 @@
             <h2><%= Assignment.model_name.human(:count => :many) %></h2>
           </div>
           <div class="span3" style="margin-left:45px;">
-            <% if current_user.teacher? %>
+            <% if current_user.teacher? or current_user.supervisor?%>
               <%= link_to t('courses.assignments.create_assignment'), new_course_assignment_path(@course), :id => 'new_assignment', :class => "btn small right" %>
             <% end %>
           </div>
