partial fix for the bug that repeats the comments on ajax

--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -69,7 +69,7 @@
           <%= render :partial => 'comments/form', :locals => {:commentable => @assignment} %>
         </div>
         
-        <div id="comments">
+        <div id="assignment_comments">
           <div class="page">
             <%= render :partial => 'comments/comments', :locals => {:commentable => @assignment, :comments => @comments} %>
           </div>
