--- a/app/views/students/deliveries/show.html.erb
+++ b/app/views/students/deliveries/show.html.erb
@@ -63,7 +63,7 @@
           <%= render :partial => 'comments/form', :locals => {:commentable => @delivery} %>
         </div>
 
-        <div id="comments">
+        <div id="delivery_comments">
           <div class="page">
             <%= render :partial => 'comments/comments', :locals => {:commentable => @delivery, :comments => @comments} %>
           </div>
