assets on comments, the design is pending

--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -1,7 +1,8 @@
 <%= semantic_form_for Comment.new, :remote => true, :url => polymorphic_path(commentable, :action => 'comment') do |form| %>
     <%= form.inputs :text do %>
-    <%= form.input :text, :input_html => {:rows => 1, :class => "span8", :onfocus => "toggleImageComment(this,'" + link_to(image_tag(current_user.avatar_file.xxsmall.url), user_path(current_user)) + "')"} %>
+    <%= form.input :text, :label => false, :input_html => {:rows => 1, :class => "span8", :onfocus => "toggleImageComment(this,'" + link_to(image_tag(current_user.avatar_file.xxsmall.url), user_path(current_user)) + "')"} %>
     <% end %>
+  <%= render :partial => 'shared/assets_fields', :locals => {:form => form} %>
   <%= form.buttons do %>
     <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"} %>
   <% end %>
