--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -287,7 +287,7 @@ line-height: 18px;
 color: #BFBFBF;
 }
 
-.wall label, 
+/*.wall label, */
 .assignments label,
 .discussions label {
 	display: none;
