--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,8 +2,8 @@
   <%= form.inputs :text do %>
     <%= form.input :text, :label => false, :input_html => {:rows => 3, :class => "textarea-size"} %>
   <% end %>
-  <%= render :partial => 'shared/assets_fields', :locals => {:form => form} %>
+  
   <%= form.buttons do %>
-    <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"} %>
+    <%= render :partial => 'shared/assets_fields_for_comment', :locals => {:form => form} %>
   <% end %>
 <% end %>
