--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -4,6 +4,7 @@
   <% end %>
   
   <%= form.buttons do %>
-    <%= render :partial => 'shared/assets_fields_for_comment', :locals => {:form => form} %>
+
+    <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"} %>
   <% end %>
 <% end %>
