--- a/app/views/comments/_comment_form.html.erb
+++ b/app/views/comments/_comment_form.html.erb
@@ -3,6 +3,6 @@
     <%= form.input :text, :label => false, :input_html => {:rows => 1, :class => "span8", :onfocus => "toggleImageComment(this,'" + link_to(image_tag(current_user.avatar_file.xxsmall.url), user_path(current_user)) + "')"} %>
     <% end %>
   <%= form.buttons do %>
-    <%= form.commit_button :label => t('forms.leave_comment'), :button_html => {:id => :submit, :class => "btn right"} %>
+    <%= render :partial => 'shared/assets_fields_for_comment', :locals => {:form => form} %>
   <% end %>
 <% end %>
