--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'bootstrap-tabs' %>
 <div class="container">
   <div class="content">
     
@@ -32,7 +33,18 @@
         </div>
 
         <div class="assignments">
-          <%= render :partial => 'assignment', :collection => @assignments %>
+          <ul class="tabs tabs_fix">
+            <li class="active"><%= link_to t('.current'), '#current' %></li>
+            <li><%= link_to t('.previous'), '#previous' %></li>
+          </ul>
+          <div class="pill-content">
+            <div id="current" class="users teachers active">
+              <%= render :partial => 'assignment', :collection => @current_assignments %>
+            </div>
+            <div id="previous" class="users teachers">
+              <%= render :partial => 'assignment', :collection => @previous_assignments %>
+            </div>
+          </div>
         </div>
         
       </div>
