--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -9,7 +9,7 @@
           <% else %>
             <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
           <% end %>
-          <li>Courses</li>
+          <li><%= t('courses.courses')%> </li>
         </ul>  
       </div>
     </div>
