--- a/app/views/home/_members.html.erb
+++ b/app/views/home/_members.html.erb
@@ -6,4 +6,5 @@
       <li><%= link_to(image_tag(user.avatar_file.xxsmall.url), user_path(user), :rel => "tip", :title => user.name) %></li>
     <% end %>
   </ul>
+  <%= link_to t(".all_members"), network_members_path %>
 
